[metadata]
name = gm_starter
version = 0.1
description = A Django app to start with GoMechanic development.
long_description = file: README.rst
url = https://developers.gomechanic.app/
author = Ashish Yadav, Prasenjit Singh
author_email = prasenjitsingh@gomechanic.in
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: